Project1/force-app/main/default/objects/Task__c/fields/Date_and_Time_of_Completion__c.field-meta.xml
<CustomField>
    <fullName>Date_and_Time_of_Completion__c</fullName>
    <label>Date and Time of Completion</label>
    <type>DateTime</type>
</CustomField>