Project1/force-app/main/default/objects/Task__c/fields/IsIncompleteTask__c.field-meta.xml
<CustomField>
    <fullName>IsIncompleteTask__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsIncompleteTask</label>
    <type>Checkbox</type>
</CustomField>