Project1/force-app/main/default/objects/Task__c/fields/TaskType__c.field-meta.xml
<CustomField>
    <fullName>TaskType__c</fullName>
    <label>TaskType</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Clean Bathroom</fullName>
            </value>
            <value>
                <fullName>Operate Register</fullName>
            </value>
            <value>
                <fullName>Make Sandwiches</fullName>
            </value>
            <value>
                <fullName>Clean Tables</fullName>
            </value>
            <value>
                <fullName>Sweep</fullName>
            </value>
            <value>
                <fullName>Mop</fullName>
            </value>
            <value>
                <fullName>Restock Inventory</fullName>
            </value>
            <value>
                <fullName>Wipe Windows</fullName>
            </value>
            <value>
                <fullName>Empty Trash</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>