Project1/force-app/main/default/objects/Task__c/validationRules/Completion_After_Start.validationRule-meta.xml
<ValidationRule>
    <fullName>Completion_After_Start</fullName>
    <active>true</active>
    <errorConditionFormula>Start_Date_and_Time__c &gt;  Date_and_Time_of_Completion__c</errorConditionFormula>
    <errorMessage>The start time and date of the task should be earlier than the date and time of completion</errorMessage>
</ValidationRule>